Start moving config into lua files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 # Ignore netrw history
 .netrwhist
+
+# I guess I should ignore this plugins directory, since its going to be filled automatically
+plugin/
